--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -254,14 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +452,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +882,7 @@
        "[12 rows x 21 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1089,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1115,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1138,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1157,21 +1150,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "list.remove(x): x not in list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[21], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Remove the y target column to check dependent columns\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mlist_categorical_columns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mremove\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtarget_column\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mValueError\u001b[0m: list.remove(x): x not in list"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Remove the y target column to check dependent columns\n",
     "list_categorical_columns.remove(target_column)"
@@ -1179,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1173,7 @@
        "Name: y, dtype: object"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1204,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1197,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1228,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1237,7 +1218,7 @@
        "<Axes: xlabel='y', ylabel='count'>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1259,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1278,7 +1259,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1290,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1335,7 +1316,7 @@
        "'poutcome'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1347,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1366,7 +1347,7 @@
        "<Axes: xlabel='y'>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1391,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1431,7 @@
        "yes       0.130416     0.676870  0.192714"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1461,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1470,7 +1451,7 @@
        "<Axes: xlabel='y'>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1492,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1606,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1640,6 +1621,37 @@
     "\n",
     "print(\"all categorical columns : \", len(list_categorical_columns))\n",
     "print(\"selected columns by chi : \", len(list_meaningful_column_by_chi), list_meaningful_column_by_chi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "previous             8\n",
+       "emp.var.rate        10\n",
+       "nr.employed         11\n",
+       "cons.price.idx      26\n",
+       "cons.conf.idx       26\n",
+       "pdays               27\n",
+       "campaign            42\n",
+       "age                 78\n",
+       "euribor3m          316\n",
+       "duration          1544\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check numerical columns \n",
+    "df[list_numeric_columns].nunique().sort_values()"
    ]
   },
   {
